# vet-dose-calc

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: prepare_github.py
tests/: conftest.py  test_dosage_calc.py  test_integration.py  test_registration.py  test_suggest.py  test_tool.py
tests/fixtures/: drugs.yaml  products.yaml
vet_dose_calc/: __init__.py  __main__.py  dosage_calc.py  drug_registry.py  input_parser.py  llm_client.py  output_formatter.py  product_registry.py  registration_flow.py  suggest_engine.py  tool.py
vet_dose_calc/data/: config.yaml
vet_dose_calc/data/prompts/: suggest.txt
vet_dose_calc/data/templates/: chatgpt_pro_33drugs.yaml
